# dextool

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPER.md  README.md  news.md
.azure-pipelines/: posix.yml
.github/workflows/: release.yml  windows-build.yml
Docker/: README.md
Docker/partial/: dmd_latest_version  fedora_base  ldc  ldc_latest_version  prepare_release_build_fedora
build-test/: CMakeCache.txt
cmake/: CMakeCPack.cmake  CMakeDCompiler.cmake.in  CMakeDInformation.cmake  common.cmake  introspect_llvm.d
cmake/Modules/: BuildD.cmake  FindDCompiler.cmake  FindLibClang.cmake
doc/install/: UBUNTU.md
libs/clang/source/clang/: File.d  TranslationUnit.d
libs/cpptooling/source/cpptooling/utility/: virtualfilesystem.d
libs/dextool/source/dextool/compilation_db/: system_compiler.d
libs/dextool_clang_extensions/: CMakeLists.txt
libs/dextool_clang_extensions/cpp_source/: libclang_interop.cpp
libs/libclang/: CMakeLists.txt
libs/libclang_ast/source/libclang_ast/: context.d
libs/libclang_ast/source/libclang_ast/ast/: nodes.d  tree.d
libs/libclang_ast/tool/: dub.sdl
plugin/: CMakeLists.txt
plugin/mutate/: CMakeLists.txt  README_config.md  README_mutation_operators.md  README_tutorial_fmt.md  ut_main.d
plugin/mutate/data/: dashboard.css  dashboard.html  index.js
plugin/mutate/doc/design/: mutations.md
plugin/mutate/source/dextool/plugin/mutate/: config.d  runner.d
plugin/mutate/source/dextool/plugin/mutate/backend/: type.d
plugin/mutate/source/dextool/plugin/mutate/backend/analyze/: package.d  pass_clang.d  pass_filter.d  pass_schemata.d
plugin/mutate/source/dextool/plugin/mutate/backend/database/: standalone.d
plugin/mutate/source/dextool/plugin/mutate/backend/mutation_type/: package.d
plugin/mutate/source/dextool/plugin/mutate/backend/report/: analyzers.d
plugin/mutate/source/dextool/plugin/mutate/backend/report/html/: package.d
plugin/mutate/source/dextool/plugin/mutate/backend/test_mutant/: common.d  common_actors.d  coverage.d  package.d  test_cmd_runner.d
plugin/mutate/source/dextool/plugin/mutate/backend/test_mutant/schemata/: builder.d  package.d  test.d
plugin/mutate/source/dextool/plugin/mutate/frontend/: argparser.d  frontend.d
plugin/mutate/test/: test_analyzer.d  test_config.d  test_report.d
plugin/mutate/testdata/: undesired_zero_float_literals.cpp  undesired_zero_integer_literals.cpp  undesired_zero_literals.cpp
plugin/mutate/testdata/config/system_config/: .dextool_mutate.toml
plugin/mutate/testdata/config/system_config/config/dextool/: dextool_mutate.toml
plugin/source/dextool/plugin/main/: standard.d
source/application/: CMakeLists.txt  app_main.d  plugin.d
test/source/dextool_test/: builders.d
tools/: symlink.d
